FDS-234. Showing "i" in owl slider on mobile devices. Also fixing bug where caption is off screen on tablets.

--- a/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
+++ b/src/components/organisms/horizontal-image-slider/_horizontal-image-slider.scss
@@ -96,10 +96,18 @@ Styleguide COMPONENTS.horizontal-image-slider
     }
 
     .toggle-caption {
-      display: none;
       font-size: 15px;
       @include breakpoint(medium) {
         display: inline-block;
+      }
+    }
+
+    figcaption {
+      @include breakpoint(medium) {
+        max-width: 83%;
+      }
+      @include breakpoint(large) {
+        max-width: none;
       }
     }
   }
